--- a/index.html
+++ b/index.html
@@ -885,12 +885,12 @@
             </div>
 
             <ul class="nav-links">
-                <li><a href="./pablo.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <!-- <li><a href="#">Sports</a></li>
                 <li><a href="#">Live Betting</a></li>
                 <li><a href="#">Casino</a></li>
                 <li><a href="#">Promotions</a></li> -->
-                <li><a href="https://aboutusofdhan.ccbp.tech/">About Us</a></li>
+                <li><a href="./aboutus.html">About Us</a></li>
             </ul>
 
             <button class="menu-toggle" aria-expanded="false">
