--- a/aboutus.html
+++ b/aboutus.html
@@ -772,7 +772,7 @@
             </div>
 
             <ul class="nav-links">
-                <li><a href="./pablo.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <!-- <li><a href="#">Sports</a></li>
                 <li><a href="#">Live Betting</a></li>
                 <li><a href="#">Casino</a></li>
