--- a/aboutus.html
+++ b/aboutus.html
@@ -996,7 +996,7 @@
 
             <div class="footer-contact">
                 <h3>Contact Us</h3>
-                <p><i class="fab fa-whatsapp"></i> +971 58 172 5968</p>
+                <p><i class="fab fa-whatsapp"></i> +918878841005</p>
                 <p><i class="fas fa-phone-alt"></i> +918358081004</p>
                 <p><i class="fas fa-map-marker-alt"></i> Dubai, UAE</p>
             </div>
