Added homepage with header section

--- a/aboutus.html
+++ b/aboutus.html
@@ -975,7 +975,7 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="/pablo.html">Home</a></li>
+                    <li><a href="./pablo.html">Home</a></li>
                     <li><a href="#">Sports Betting</a></li>
                     <!-- <li><a href="#">Live Betting</a></li>
                     <li><a href="#">Casino</a></li>
