--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Sports Betting</a></li>
                     <!-- <li><a href="#">Live Betting</a></li>
                     <li><a href="#">Casino</a></li>
