Numbers chnage kr to diya hai mene vese bhi pehle se he change tha and upper title waale jagah logo daal diya

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="icon" type="images/x-icon" href="https://media-hosting.imagekit.io/79efd1399fef42f2/Dark%20Green%20Modern%20Initial%20Logo%20(3).png?Expires=1838628933&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=la4YVTg4PDEx2ftI2608wQmkYGyWYC0iTdKSvnhfX7i7i7WB7pboxxdjpAePcEHfH1HyiwSy5MdnQYkxLJb7wJZYHS6rFErVBJF-x7doQjWlZ3K8Q9dgsKG7SFT0969smG1tg3FL2XlzTo41SnoNxamMUwmwdJDQolGDRGE~RWhcBikZLDZ7fXcNm3J3xXEnyupHwaICuDXihtDHl7armSHW06GF33~xAL16Ur0zC7wxrWxDhFSMvH14i6KmgEhMKGYzRuiTTB0MBSmTvvbcSICgFrXBLoCkSCOcAb0iGaJmdY6q4tNKUWcYp59VclBhcFWmxIhqk8UT7I0APJ39KQ__" />
+
     <style>
         :root {
             --primary: #06d6a0;
@@ -1212,7 +1214,7 @@
     </footer>
 
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/8878841005" class="whatsapp-float">
+    <a href="https://wa.me/+918878841005" class="whatsapp-float">
         <i class="fab fa-whatsapp"></i>
     </a>
 
