Hello i want to get a demo id message updated

--- a/index.html
+++ b/index.html
@@ -1214,10 +1214,9 @@
     </footer>
 
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/+918878841005" class="whatsapp-float">
+    <a href="https://wa.me/918878841005?text=Hello%2C%20I%20want%20to%20get%20a%20Demo%20ID" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
-    </a>
-
+      </a>
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
