--- a/aboutus.html
+++ b/aboutus.html
@@ -1010,9 +1010,9 @@
     </footer>
 
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/+918878841005" class="whatsapp-float">
-        <i class="fab fa-whatsapp"></i>
-    </a>
+   <a href="https://wa.me/918878841005?text=Hello%2C%20I%20want%20to%20get%20a%20Demo%20ID" class="whatsapp-float" target="_blank">
+  <i class="fab fa-whatsapp"></i>
+</a>
 
     <script>
         // Mobile Menu Toggle
