--- a/index.html
+++ b/index.html
@@ -1172,8 +1172,8 @@
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                    <a href="https://www.instagram.com/dhaanlaxmiexchange?utm_source=qr&igsh=MWFhMnZla2R4YXQ1ZA=="><i class="fab fa-instagram"></i></a>
+                    <a href="https://t.me/8878841005"><i class="fab fa-telegram-plane"></i></a>
                     <a href="https://wa.me/8878841005" ><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
