--- a/aboutus.html
+++ b/aboutus.html
@@ -968,8 +968,8 @@
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                    <a href="https://www.instagram.com/dhaanlaxmiexchange?utm_source=qr&igsh=MWFhMnZla2R4YXQ1ZA=="><i class="fab fa-instagram"></i></a>
+                    <a href="https://t.me/8878841005"><i class="fab fa-telegram-plane"></i></a>
                     <a href="https://wa.me/8878841005" ><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
@@ -977,7 +977,7 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="./pablo.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Sports Betting</a></li>
                     <!-- <li><a href="#">Live Betting</a></li>
                     <li><a href="#">Casino</a></li>
